# practice-100knocks-data_analytics

./: .dockerignore  .gitignore  README.md  activate_python.bash  pyproject.toml  requirements.txt  start-kernel.sh
docker/: Dockerfile  build_marimo_container.sh  run_marimo_container.sh
src/chapter1/: chapter1_practice.py
src/chapter2/: practice_chapter2.py
src/chapter3/: practice_chapter3.py
src/chapter4/: practice_chapter4.py
