[project]
name = "100knocks-data-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dlib>=20.0.1",
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.30",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.10",
    "marimo>=0.23.8",
    "matplotlib>=3.10.9",
    "mecab-python3>=1.0.12",
    "networkx>=3.6.1",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "ortoolpy>=0.9.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pulp>=3.3.1",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.ruff] # ruffの全体設定
# 1行の最大文字数を127に設定
line-length = 127

[tool.ruff.lint] # ruffのリンター設定
# 有効にするルールセット
select = ["E", "F", "I"]

# 無視するルール
ignore = []

[tool.ruff.format]
# ruffのフォーマットの設定
# シングルクオートを使用
quote-style = "single"

[tool.ty] # tyのの設定をここに書く

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu132"
